crates/myso-core/src/unit_tests/snapshots/myso_core__authority__authority_tests__clever_only_abort_abort_error.snap
---
source: crates/myso-core/src/unit_tests/authority_tests.rs
expression: abort_error.unwrap()
---
Module ID: 0x0000000000000000000000000000000000000000000000000000000000000000::aborts
Function: only_abort
Line: 6
